fixing 1